# notify

./: Cargo.toml  LICENSE
src/: app.rs  command.rs  confirm_widget.rs  flags.rs  func.rs  id.rs  lib.rs  main.rs  notification_widget.rs  proto.rs  send.rs
test-examples/: da457ba8-b113-43ca-b2bd-4ec519c6e71d  dcb624cc-1664-4220-aa55-553f198dcbb4
