[package]
name = "notify"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
dirs = "6.0.0"
indexmap = "2.13.0"
owo-colors = "4.3.0"
ratatui = "0.30.0"
thiserror = "2.0.18"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
uuid = { version = "1.21.0", features = ["v4"] }

[profile.release]
strip = true
